[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/Assets/general/spawing_area.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 0.2 )

[node name="spawing_area" type="Area"]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_spawing_area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_spawing_area_body_exited"]
